Fix red diploma calculation method